Bug:  700048 Reviewer:  Self Comments:  Reimplemented task name wrapping so that it works across browsers.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/tasklisting/TaskDueDateDlg.java
M    gwt/src/org/kablink/teaming/gwt/client/tasklisting/TaskTable.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2893,6 +2893,7 @@ top:100px;
 {
 	width: 400px;
 	margin-top: 5px;
+	font-weight: bold;
 }
 
 /* Start:  GWT Task Folder Listing styles. */
@@ -3295,13 +3296,24 @@ a.gwtTaskList_task-icon:hover
 {
 	background: none !important;
 }
-.gwtTaskList_task-nameAnchor
+.gwtTaskList_task-nameAnchor, .gwtTaskList_task-nameAnchor:visited
 {
-	display:      inline-block !important;
-	white-space:  normal       !important;
+	color:        #135c8f !important;
+	white-space:  normal  !important;
+	position:     absolute;
+}
+.gwtTaskList_task-nameAnchor:hover
+{
+	background: #cce9ee;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
 }
 .gwtTaskList_task-nameCell
 {
+}
+.gwtTaskList_task-namePanel
+{
+	position: relative;
 }
 /* End:  GWT Task Folder Listing styles. */
 
